-
Bug
-
Resolution: Fixed
-
P1: Critical
-
5.15
Try to open PDF files from the browser. It's not working and I got an assertion fail:
[2348610:2348610:0513/103233.267730:FATAL:values.cc(224)] Check failed: IsStringUTF8(string_value_). #0 0x7f204315cded base::debug::CollectStackTrace()#1 0x7f2042f44a2b base::debug::StackTrace::StackTrace()#2 0x7f2042f449e2 base::debug::StackTrace::StackTrace()#3 0x7f2042f7288e logging::LogMessage::~LogMessage()#4 0x7f204314fdcc base::Value::Value()#5 0x7f204314fca7 base::Value::Value()#6 0x7f20425769fc std::make_unique<>()#7 0x7f2043156b8c base::DictionaryValue::SetString()#8 0x7f204244792d extensions::ExtensionsGuestViewMessageFilter::CreateMimeHandlerViewGuestOnUIThread()
Also, quick and widgets example browser failing differently.
- is duplicated by
-
QTBUG-85571 [REG: 5.14->5.15]: PDFs cannot be viewed anymore in WebEngine
-
- Closed
-
| For Gerrit Dashboard: QTBUG-84340 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 301412,3 | Fix resource look-up for pdf viewer in Chromium 80 | 5.15 | qt/qtwebengine | Status: MERGED | +2 | 0 |
| 301939,2 | [Backport] Support Unicode non-characters in JSON{Parser,Writer} | 80-based | qt/qtwebengine-chromium | Status: MERGED | +2 | 0 |
| 301940,2 | [Backport] Fix DCHECK in ~ExtensionFunction(). | 80-based | qt/qtwebengine-chromium | Status: MERGED | +2 | 0 |
| 307264,3 | Make loading PDF view less racy | 5.15 | qt/qtwebengine | Status: MERGED | +2 | 0 |