[Backport] Fix DCHECK in ~ExtensionFunction().

If permission is denied to call an extension function, the function
is currently destroyed without responding.  This causes a DCHECK
failure in its destructor.

Instead, ask the function to respond with an error in this case, which
makes did_respond() return true, which avoids the DCHECK.

This showed up during some trybot runs of an unrelated change, so this
fixes some test flakiness.

Bug: none
Task-number: QTBUG-84340
Change-Id: If4e8ba93ce875b78bb5ed2f3f0bb4f38e8772ff7
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>